<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settingsButton"
            android:visible="true"
            app:showAsAction="always" />

        <item
            android:id="@+id/nav_collection"
            android:title="@string/collectionButton" />

        <item
            android:id="@+id/nav_songs"
            android:title="@string/songsButton" />

        <item
            android:id="@+id/nav_chords"
            android:title="@string/chordsButton" />

        <item
            android:id="@+id/nav_tuner"
            android:title="@string/tunerButton" />

        <item
            android:id="@+id/nav_metronome"
            android:title="@string/metronomeButton" />
    </group>

</menu>