<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="20dp"
    android:gravity="bottom|end"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/toCollectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="toCollection"
        android:text="@string/collectionButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/toSongsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="toSongs"
        android:text="@string/songsButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/toChordsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="toChords"
        android:text="@string/chordsButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/toTunerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="toTuner"
        android:text="@string/tunerButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/toMetronomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="toMetronome"
        android:text="@string/metronomeButton"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/settingsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settingsbuttonimage"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:onClick="toSettings"
        app:srcCompat="@drawable/ic_settings" />

</LinearLayout>